Fix page obscured by UI on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,9 @@
   width: 100vw;
   color: #141414;
 }
+
+@supports (min-height: 100dvh) {
+  .page {
+    min-height: 100dvh;
+  }
+}
